# swar-experiments

./: .gitignore  CLAUDE.md  CMakeLists.txt
bench/: comparison_bench.cpp  packed_word_bench.cpp
include/swar/: bucketed_set.hpp  packed_set.hpp  packed_word.hpp
scripts/: check.sh  comparison.py  visualize.py
test/: packed_word_test.cpp
